src/pypa/parser/parser.cc
// Copyright 2014 Vinzenz Feenstra
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

#include <cassert>
#include <cstddef>

// NOTE(zasgar) Disabling GMP.
//#include <gmp.h>

#include <pypa/parser/apply.hh>
#include <pypa/parser/parser_fwd.hh>
#include <double-conversion/double-conversion.h>
#include <pypa/ast/context_assign.hh>

#include "absl/strings/numbers.h"

namespace pypa {

String make_string(String const & input, bool & unicode, bool & raw, bool ignore_escaping);

template< typename Container >
void flatten(AstStmt s, Container & target) {
    for(auto e : std::static_pointer_cast<AstSuite>(s)->items) {
        if(e && e->type == AstType::Suite) {
            flatten(e, target);
        }
        else {
            target.push_back(e);
        }
    }
}

template<typename T>
AstPtr error_transform(std::shared_ptr<T> const & t) {
    return t;
}

template<typename T>
AstPtr error_transform(T const & t) {
    return std::make_shared<T>(t);
}

void report_error(State & s) {
    Error & e = s.errors.top();
    if(s.options.error_handler) {
        s.options.error_handler(e);
    }

    if(!s.options.printerrors) {
        return;
    }
    unsigned long long cur_line = e.cur.line;
    fprintf(stderr, "  File \"%s\", line %llu\n    %s\n    ", e.file_name.c_str(), cur_line, e.line.c_str());
    if(e.cur.column == 0) ++e.cur.column;
    for(unsigned i = 0; i < e.cur.column - 1; ++i) {
        fputc(' ', stderr);
    }
    fprintf(stderr, "^\n%s: %s", e.type == ErrorType::SyntaxError ? "SyntaxError" : e.type == ErrorType::SyntaxWarning ? "SyntaxWarning" : "IndentationError", e.message.c_str());
    if(e.detected_line != -1 && s.options.printdbgerrors) {
        fprintf(stderr, "\n-> Reported @%s:%d in %s\n\n", e.detected_file, e.detected_line, e.detected_function);
    }
}

#if 0
void add_symbol_error(State & s, char const * message, int line, int column, int reported_line, char const * reported_file_name, char const * reported_function) {
    TokenInfo ti = s.tok_cur;
    ti.line = line;
    ti.column = column;
    s.errors.push({ErrorType::SyntaxError, message, s.lexer->get_name(), ti, {}, s.lexer->get_line(line), reported_line, reported_file_name, reported_function });
    report_error(s);
}
#endif

void syntax_error_dbg(State & s, AstPtr ast, char const * message, int line = -1, char const * file = 0, char const * function = 0) {
    TokenInfo cur = top(s);
    if(ast && cur.line < ast->line) {
        cur.line    = ast->line;
        cur.column  = ast->column;
    }
    s.errors.push({ErrorType::SyntaxError, message, s.lexer->get_name(), cur, ast, s.lexer->get_line(cur.line), line, file ? file : "", function ? function : ""});
    report_error(s);
}

void indentation_error_dbg(State & s, AstPtr ast, int line = -1, char const * file = 0, char const * function = 0) {
    TokenInfo cur = top(s);
    if(ast && cur.line > ast->line) {
        cur.line    = ast->line;
        cur.column  = ast->column;
    }
    s.errors.push({ErrorType::IndentationError, "", s.lexer->get_name(), cur, ast, s.lexer->get_line(cur.line), line, file ? file : "", function ? function : ""});
    report_error(s);
}

#ifdef _WIN32
#define syntax_error(s, AST_ITEM, msg) syntax_error_dbg(s, error_transform(AST_ITEM), msg, __LINE__, __FILE__, __func__)
#define indentation_error(s, AST_ITEM) indentation_error_dbg(s, error_transform(AST_ITEM), __LINE__, __FILE__, __func__)
#else
#define syntax_error(s, AST_ITEM, msg) syntax_error_dbg(s, error_transform(AST_ITEM), msg, __LINE__, __FILE__, __PRETTY_FUNCTION__)
#define indentation_error(s, AST_ITEM) indentation_error_dbg(s, error_transform(AST_ITEM), __LINE__, __FILE__, __PRETTY_FUNCTION__)
#endif

bool number_from_base(int64_t base, State & s, AstNumberPtr & ast) {
    String const & value = top(s).value;
    String value_cpy = top(s).value;
    AstNumber & result = *ast;
    // NOTE(zasgar): remove gmp dep.
    int64_t num = 2;    
    result.num_type = AstNumber::Integer;
    pop(s);
    bool long_post_fix = (top(s).value == "L" || top(s).value == "l");
    if(!long_post_fix) {
        unpop(s);
    }
    if (long_post_fix) {
      result.num_type = AstNumber::Long;
      result.str = value_cpy;
      return true;
    }
    bool retval = absl::SimpleAtoi(value, &num);
    result.integer = num;
    return retval;
//    MP_INT integ;
//    mpz_init_set_str(&integ, value.c_str(), base);
//
//    result.num_type = AstNumber::Integer;
//    pop(s);
//    bool long_post_fix = (top(s).value == "L" || top(s).value == "l");
//    if(!long_post_fix) {
//        unpop(s);
//    }
//    if(long_post_fix || !mpz_fits_slong_p(&integ)) {
//        result.num_type = AstNumber::Long;
//    }
//
//    if(result.num_type == AstNumber::Long) {
//        result.str.resize(mpz_sizeinbase(&integ, 10) + 2, 0);
//        mpz_get_str(&result.str[0], 10, &integ);
//    }
//    else {
//        result.integer = mpz_get_si(&integ);
//    }
//    mpz_clear(&integ);
    return true;
}

bool string_to_double(String const & s, double & result) {
    double_conversion::StringToDoubleConverter conv(0, 0.0, 0.0, 0, 0);
    int length = int(s.size());
    int processed = 0;
    result = conv.StringToDouble(s.c_str(), length, &processed);
    return length == processed;
}

bool number(State & s, AstNumberPtr & ast) {
    StateGuard guard(s, ast);
    location(s, create(ast));
    int base = 0;
    if(is(s, Token::NumberFloat)) {
        String const & dstr = top(s).value;
        double result = 0;
        if(!string_to_double(dstr, result)) {
            syntax_error(s, ast, "Invalid floating point number");
            return false;
        }
        ast->num_type = AstNumber::Float;
        ast->floating = result;
        pop(s);
        return guard.commit();
    }
    else if(is(s, Token::NumberBinary)) {
        base = 2;
    }
    else if(is(s, Token::NumberOct)) {
        base = 8;
    }
    else if(is(s, Token::NumberInteger)) {
        base = 10;
    }
    else if(is(s, Token::NumberHex)) {
        base = 16;
    }
    if(base && number_from_base(base, s, ast)) {
        pop(s);
        return guard.commit();
    }
    return false;
}

bool get_name(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstNamePtr name;
    location(s, create(name));
    ast = name;
    if(consume_value(s, Token::Identifier, name->id)) {
        return guard.commit();
    }
    return false;
}

template< typename Fun >
bool generic_binop_expr(State & s, AstExpr & ast, TokenKind op, AstBinOpType op_type, Fun fun) {
    StateGuard guard(s, ast);
    if(fun(s, ast)) {
        while(expect(s, op)) {
            AstBinOpPtr bin;
            location(s, create(bin));
            bin->left = ast;
            bin->op = op_type;
            ast = bin;
            if(!fun(s, bin->right)) {
                syntax_error(s, ast, "Expected expression after operator");
            }
        }
        return guard.commit();
    }
    return false;
}

template< typename Fun >
bool generic_boolop_expr(State & s, AstExpr & ast, Token op, AstBoolOpType op_type, Fun fun) {
    StateGuard guard(s, ast);
    if(fun(s, ast)) {
        if(is(s, op)) {
            AstBoolOpPtr p;
            location(s, create(p));
            p->values.push_back(ast);
            p->op = op_type;
            ast = p;
            while(expect(s, op)) {
                AstExpr tmp;
                if(!fun(s, tmp)) {
                    syntax_error(s, ast, "Expected expression after operator");
                    return false;
                }
                p->values.push_back(tmp);
            }
        }
        return guard.commit();
    }
    return false;
}

bool dotted_as_names(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstTuplePtr lst;
    location(s, create(lst));
    ast = lst;
    AstExpr dotted;
    while(dotted_as_name(s, dotted)) {
        lst->elements.push_back(dotted);
        if(!expect(s, TokenKind::Comma)) {
            break;
        }
    }
    if(lst->elements.empty()) {
        return false;
    }
    if(lst->elements.size() == 1) {
        ast = lst->elements.front();
    }
    return  guard.commit();
}

bool import_as_name(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstAliasPtr alias;
    location(s, create(alias));
    ast = alias;
    if(get_name(s, alias->name))
    {
        if(expect(s, Token::KeywordAs)) {
            if(!get_name(s, alias->as_name)) {
                syntax_error(s, ast, "Expected identifier after `as`");
                return false;
            }
        }
        return guard.commit();
    }
    return false;
}

bool try_stmt(State & s, AstStmt & ast) {
    StateGuard guard(s, ast);
    AstTryExceptPtr try_except;
    location(s, create(try_except));
    ast = try_except;
    // (expect(s, Token::KeywordTry) expect(s, TokenKind::Colon)
    // -> suite
    if(!(expect(s, Token::KeywordTry) && expect(s, TokenKind::Colon))) {
        return false;
    }
    if(!suite(s, try_except->body)) {
        return false;
    }
    // ((except_clause expect(s, TokenKind::Colon) suite)+
    AstExpr clause;
    while(except_clause(s, clause)) {
        assert(clause->type == AstType::Except);
        AstExceptPtr except = std::static_pointer_cast<AstExcept>(clause);
        if(!expect(s, TokenKind::Colon)) {
            syntax_error(s, clause, "Expected `:`");
            return false;
        }
        if(!suite(s, except->body)) {
            return false;
        }
        try_except->handlers.push_back(except);
    }
    // [expect(s, Token::KeywordElse) expect(s, TokenKind::Colon) suite]
    if(expect(s, Token::KeywordElse)) {
        if(try_except->handlers.empty()) {
            syntax_error(s, ast, "`else` cannot follow `try` without `except` handler");
            return false;
        }
        if(!expect(s, TokenKind::Colon)) {
            syntax_error(s, ast, "expected `:`");
            return false;
        }
        if(!suite(s, try_except->orelse)) {
            return false;
        }
    }
    // [expect(s, Token::KeywordFinally) expect(s, TokenKind::Colon) suite]
    // ||expect(s, Token::KeywordFinally) expect(s, TokenKind::Colon) suite))
    if(is(s, Token::KeywordFinally)) {
        AstTryFinallyPtr ptr;
        location(s, create(ptr));
        expect(s, Token::KeywordFinally);
        ast = ptr;
        if(!expect(s, TokenKind::Colon)) {
            syntax_error(s, ast, "expected `:`");
            return false;
        }
        if(try_except->handlers.empty()
           && !try_except->orelse
           && try_except->body
           && try_except->body->type == AstType::Suite) {
            ptr->body = try_except->body;
        }
        else {
            ptr->body = try_except;
        }
        if(!suite(s, ptr->final_body)) {
            return false;
        }
    }
    return guard.commit();
}

bool dotted_name_list(State & s, AstExpr & ast) {
    std::vector<AstExpr> names;
    do {
        AstExpr name;
        if(!get_name(s, name)) {
            if(!names.empty()) {
                syntax_error(s, names.back(), "Expected identifier after `.`");
                return false;
            }
            break;
        }
        assert(name && name->type == AstType::Name);
        visit(context_assign{AstContext::Load}, name);
        names.push_back(std::move(name));
    } while(expect(s, TokenKind::Dot));
    if(names.empty()) {
        return false;
    }
    ast = names[0];
    for(auto it = names.begin() + 1; it != names.end(); ++it) {
        AstAttributePtr attr;
        location(s, create(attr));
        attr->attribute = *it;
        attr->value = ast;
        ast = attr;
    }
    return true;
}

bool dotted_name(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    if(get_name(s, ast)) {
        if(expect(s, TokenKind::Dot)) {
            assert(ast && ast->type == AstType::Name);
            AstNamePtr name = std::static_pointer_cast<AstName>(ast);
            AstExpr trailing_name;
            if(dotted_name(s, trailing_name)) {
                assert(trailing_name && trailing_name->type == AstType::Name);
                AstName & trail = *std::static_pointer_cast<AstName>(trailing_name);
                name->id += "." + trail.id;
                name->dotted = true;
                return guard.commit();
            }
            else {
                syntax_error(s, name, "Expected identifier after `.`");
            }
        }
        else {
            return guard.commit();
        }
    }
    return false;
}


bool small_stmt(State & s, AstStmt & ast) {
    return print_stmt(s, ast)
        || expr_stmt(s, ast)
        || del_stmt(s, ast)
        || pass_stmt(s, ast)
        || flow_stmt(s, ast)
        || import_stmt(s, ast)
        || global_stmt(s, ast)
        || exec_stmt(s, ast)
        || assert_stmt(s, ast)
    ;
}

bool augassign(State & s, AstBinOpType & op) {
    if(expect(s, TokenKind::PlusEqual))
        op = AstBinOpType::Add;
    else if(expect(s, TokenKind::MinusEqual))
        op = AstBinOpType::Sub;
    else if(expect(s, TokenKind::StarEqual))
        op = AstBinOpType::Mult;
    else if(expect(s, TokenKind::SlashEqual))
        op = AstBinOpType::Div;
    else if(expect(s, TokenKind::PercentEqual))
        op = AstBinOpType::Mod;
    else if(expect(s, TokenKind::BinAndEqual))
        op = AstBinOpType::BitAnd;
    else if(expect(s, TokenKind::BinOrEqual))
        op = AstBinOpType::BitOr;
    else if(expect(s, TokenKind::CircumFlexEqual))
        op = AstBinOpType::BitXor;
    else if(expect(s, TokenKind::LeftShiftEqual))
        op = AstBinOpType::LeftShift;
    else if(expect(s, TokenKind::RightShiftEqual))
        op = AstBinOpType::RightShift;
    else if(expect(s, TokenKind::DoubleStarEqual))
        op = AstBinOpType::Power;
    else if(expect(s, TokenKind::DoubleSlashEqual))
        op = AstBinOpType::FloorDiv;
    else
        return false;
    return true;
}

bool return_stmt(State & s, AstStmt & ast) {
    StateGuard guard(s, ast);
    AstReturnPtr ret;
    location(s, create(ret));
    ast = ret;
    // expect(s, Token::KeywordReturn) [testlist]
    if(!expect(s, Token::KeywordReturn))
    {
        return false;
    }
    testlist(s, ret->value);
    return guard.commit();
}

bool not_test(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstUnaryOpPtr result;
    location(s, create(result));
    // expect(s, Token::KeywordNot) not_test || comparison
    if(expect(s, Token::KeywordNot)) {
        result->op = AstUnaryOpType::Not;
        if(!not_test(s, result->operand)) {
            return false;
        }
        ast = result;
    }
    else if(!comparison(s, ast)) {
        return false;
    }
    return guard.commit();
}

bool testlist1(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    location(s, create(ast));
    if(!test(s, ast)) {
        return false;
    }
    if(is(s, TokenKind::Comma)) {
        AstTuplePtr exprs;
        clone_location(ast, create(exprs));
        exprs->elements.push_back(ast);
        ast = exprs;
        while(expect(s, TokenKind::Comma)) {
            AstExpr temp;
            if(!test(s, temp)) {
                break;
            }
            exprs->elements.push_back(temp);
        }
    }
    return guard.commit();
}

bool testlist_safe(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstTuplePtr exprs;
    location(s, create(exprs));
    ast = exprs;
    AstExpr temp;
    // old_test [(expect(s, TokenKind::Comma) old_test)+ [expect(s, TokenKind::Comma)]]
    while(old_test(s, temp)) {
        exprs->elements.push_back(temp);
        if(!expect(s, TokenKind::Comma)) {
            break;
        }
    }
    if(exprs->elements.size() == 1) {
        ast = exprs->elements.front();
        return guard.commit();
    }
    return !exprs->elements.empty() && guard.commit();
}

bool testlist_comp(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstTuplePtr exprs;
    location(s, create(exprs));
    ast = exprs;
    AstExpr tmp;
    // test ( comp_for || (expect(s, TokenKind::Comma) test)* [expect(s, TokenKind::Comma)] )
    if(!test(s, tmp)) {
        return false;
    }
    if(is(s, Token::KeywordFor)) {
        AstGeneratorPtr gener;
        location(s, create(gener));
        ast = gener;
        gener->element = tmp;
        if(!comp_for(s, gener->generators)) {
            return false;
        }
    }
    else {
        bool last_was_comma = false;
        exprs->elements.push_back(tmp);
        for(;;) {
            if(!expect(s, TokenKind::Comma)) {
                break;
            }
            if(!test(s, tmp)) {
                last_was_comma = true;
                break;
            }
            exprs->elements.push_back(tmp);
        }

        if(!last_was_comma && exprs->elements.size() == 1) {
            ast = exprs->elements.front();
        }
    }
    return guard.commit();
}

bool except_clause(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstExceptPtr except;
    location(s, create(except));
    ast = except;
    // expect(s, Token::KeywordExcept) [test [(expect(s, Token::KeywordAs) || expect(s, TokenKind::Comma)) test]]
    if(!expect(s, Token::KeywordExcept)) {
        return false;
    }

    if(test(s, except->type)) {
        if(expect(s, Token::KeywordAs) || expect(s, TokenKind::Comma)) {
            if(!test(s, except->name)) {
                return false;
            }
            visit(context_assign{AstContext::Store}, except->name);
        }
    }

    return guard.commit();
}

bool listmaker(State & s, AstExpr & ast) {
    StateGuard guard(s, ast);
    AstListPtr ptr;
    location(s, create(ptr));
    // test ( list_for || (expect(s, TokenKind::Comma) test)* [expect(s, TokenKind::Comma)] )
    if(test(s, ast)) {
        if(is(s, Token::KeywordFor)) {
            AstListCompPtr comp;
            location(s, create(comp));
            comp->element = ast;
            ast = comp;
            if(!list_for(s, comp->generators)) {
                return false;
            }
        }
        else {
            ptr->elements.push_back(ast);
            ast = ptr;
            while(expect(s, TokenKind::Comma)) {
                AstExpr tmp;
                if(!test(s, tmp)) {
                    break;
                }
                ptr->elements.push_back(tmp);
            }
        }
    }
    // else empty list => OK
    return guard.commit();
}

bool old_test(State & s, AstExpr & ast) {
    // or_test || old_lambdef
    return or_test(s, ast)
        || old_lambdef(s, ast);
}


bool break_stmt(State & s, AstStmt & ast) {
    StateGuard guard(s, ast);
    AstBreakPtr brk;
    location(s, create(brk));
    ast = brk;
    if(!expect(s, Token::KeywordBreak)) {
        return false;
    }
    return guard.commit();
}

bool with_stmt(State & s, AstStmt & ast, bool is_inner) {
    StateGuard guard(s, ast);
    AstWithPtr with;
    location(s, create(with));
    ast = with;
    // expect(s, Token::KeywordWith) with_item (expect(s, TokenKind::Comma) with_item)*  expect(s, TokenKind::Colon) suite
    if(!is_inner && !expect(s, Token::KeywordWith)) {
        return false;
    }

    // test [expect(s, Token::KeywordAs) expr]
    if(!test(s, with->context)) {
        return false;
    }
    if(expect(s, Token::KeywordAs)) {
        if(!expr(s, with->optional)) {
            syntax_error(s, ast, "Expected expression after `as`");
            return false;
        }
        visit(context_assign{AstContext::Store}, with->optional);
    }

    if(expect(s, TokenKind::Comma)) {
        if(!with_stmt(s, with->body, true)) {
            return false;
        }
    }
    else {
        if(!expect(s, TokenKind::Colon)) {
            syntax_error(s, ast, "Expected `:`");
            return false;
        }
        if(!suite(s, with->body)) {
            return false;
        }
    }
    return guard.commit();
}

bool with_stmt(State & s, AstStmt & ast) {
    return with_stmt(s, ast, false);
}

bool comp_op(State & s, AstCompareOpType & op) {
    StateGuard guard(s);
    if(expect(s, TokenKind::Less)) {
        op = AstCompareOpType::Less;
    }
    else if(expect(s, TokenKind::Greater)) {
        op = AstCompareOpType::More;
    }
    else if(expect(s, TokenKind::EqualEqual)) {
        op = AstCompareOpType::Equals;
    }
    else if(expect(s, TokenKind::GreaterEqual)) {
        op = AstCompareOpType::MoreEqual;
    }
    else if(expect(s, TokenKind::LessEqual)) {
        op = AstCompareOpType::LessEqual;
    }
    else if(expect(s, TokenKind::NotEqual)) {
        op = AstCompareOpType::NotEqual;
    }
    else if(expect(s, Token::KeywordIn)) {
        op = AstCompareOpType::In;
    }
    else if(expect(s, Token::KeywordNot) && expect(s, Token::KeywordIn)) {
        op = AstCompareOpType::NotIn;
    }
    else if(expect(s, Token::KeywordIs)) {
        op = AstCompareOpType::Is;
        if(expect(s, Token::KeywordNot)) {
           op = AstCompareOpType::IsNot;
        }
    }
    else {
        return false;
    }
    return guard.commit();
}

bool raise_stmt(State & s, AstStmt & ast) {
    // expect(s, Token::KeywordRaise) [test [expect(s, TokenKind::Comma) test [expect(s, TokenKind::Comma) test]]]
    if(!expect(s, Token::KeywordRaise)) {
        return false;
    }
    StateGuard guard(s, ast);
    AstRaisePtr raise;
    location(s, create(raise));
    ast = raise;

    if(test(s, raise->arg0)) {
        if(expect(s, TokenKind::Comma)) {
            if(!test(s, raise->arg1)) {
                syntax_error(s, ast, "Expected 2nd argument after comma");
                return false;
            }
            if(expect(s, TokenKind::Comma)) {
                if(!test(s, raise->arg2)) {
                    syntax_error(s, ast, "Expected 3rd argument after comma");
                    return false;
                }
            }
        }
    }

    return guard.commit();
}
